syntax = "proto3";

package com.hxy.proto;

option java_package = "com.hxy.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {
    rpc getRealnameByUsername (MyRequest) returns (MyResponse);

    //grpc要求参数和返回值必须是message类型
    rpc getStudentsByAge (StudentRequest) returns (stream StudentResponse);

    rpc getStudentsWrapperByAge (stream StudentRequest) returns (StudentResponseList);

    rpc biTalk (stream StreamRequest) returns (StreamResponse);
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 1;
}

message StudentRequest {
    int32 age = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList {
    repeated StudentResponse studentResponse = 1;
}

message StreamRequest {
    string request_info = 1;
}

message StreamResponse {
    string response_info = 1;
}

